src/snapshots/afrotd__parser__tests__interpretation_3.3.10_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 10
index: 2
text: "Zu einem späten Zeitpunkt in der ersten Spielperiode wird Ballträger A22 legal getackelt und verliert seinen Helm, unmittelbar nachdem er mit seinem Rücken auf den Boden geprallt ist. Die Game Clock\nsteht bei 0:00."
ruling: "A22 muss das Spiel für einen Down – den\nersten Down in der zweiten Spielperiode – verlassen. A22 verlor seinen\nHelm durch das Spielgeschehen und es gab kein Helmfoul durch Team\nB. A22 kann jedoch im Spiel bleiben, wenn Team A ein Timeout nimmt."
