src/snapshots/afrotd__parser__tests__interpretation_3.3.10_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 10
index: 3
text: "Während des Downs verliert A22 seinen Helm vollständig (kein\nHelmfoul durch die Defense) und B77 bleibt verletzt am Boden liegen.\nDer Ballträger wird inbounds getackelt. Als die Game Clock angehalten\nwird, bleibt sie bei 0:58 in der vierten Spielperiode stehen."
ruling: "Solange Team A kein Timeout nimmt, muss A22 das Spiel für einen\nDown verlassen. Die Play Clock wird aufgrund der Verletzung eines\nDefense Spielers eher auf 40 Sekunden statt auf 25 Sekunden für den\nHelmverlust des Offense Spielers gestellt. Es gibt keinen 10-SekundenAbzug, da die Game Clock für beides, Helmverlust und Verletzung, angehalten wurde und diese sich bei gegnerischen Spielern ereigneten."
