src/snapshots/afrotd__parser__tests__interpretation_3.3.1_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 1
index: 1
text: "3. und 2 von der B-15. A45 fumbelt einen Live Ball nachdem er\ndrei Meter advanct ist. Die Schiedsrichter können nicht herausfinden,\nwer den Ball recovert hat, deshalb hält der Line Judge die Game Clock\nan, während im gleichen Augenblick erkannt wird, wer den Ball recovert\nhatte. A45 hatte den Ball recovert und (a) die Line to Gain nicht erreicht oder (b) die Line to Gain erreicht."
ruling: "Der 40-SekundenCountdown beginnt, wenn der Ball für dead erklärt wird. (a) Der Referee\nzeigt sofort an, dass die Game Clock gestartet werden soll. (b) Die Game Clock startet mit dem Signal des Referees, wenn der Ball spielbereit\nist."
