src/snapshots/afrotd__parser__tests__interpretation_3.3.1_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 1
index: 5
text: "3. und 5 von der B-30. Zu einem späten Zeitpunkt in der Halbzeit haben beide Teams ihre Team-Timeouts noch verfügbar. Während\nTeam A sich an der Scrimmage Line befindet und bereit ist, den Snap\ndurchzuführen, verlangt Team B’s Head Coach ein Timeout und dem\nVerlangen wird stattgegeben. Nach dem Timeout sind beide Teams\nin Position und der Ball ist spielbereit. (a) Team B’s Head Coach verlangt ein Timeout oder (b) Team A’s Head Coach verlangt ein Timeout."
ruling: "(a) Die Schiedsrichter sollen Team B’s Timeout-Verlangen\nignorieren. Team B hat zwar noch zwei Timeouts, aber sie haben in\ndieser Dead Ball Periode bereits ein Timeout genommen, so dass ein\nweiteres Timeout nicht zugelassen wird. (b) Team A’s Verlangen nach\neinem Timeout wird stattgegeben. Da Team A in dieser Halbzeit noch\nTimeouts zur Verfügung hat und in dieser Dead Ball Periode noch kein\nTimeout genommen hat, wird ein Timeout zugelassen."
