src/snapshots/afrotd__parser__tests__interpretation_3.3.1_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 1
index: 6
text: "3. und 5 von der B-30. Zu einem späten Zeitpunkt in der Halbzeit haben beide Teams ihre Team-Timeouts noch verfügbar. Während\nTeam A sich an der Scrimmage Line befindet und bereit ist, den Snap\ndurchzuführen, verlangt Team B’s Head Coach ein Timeout und dem\nVerlangen wird stattgegeben. Nach dem Timeout sind beide Teams in\nPosition und der Ball ist spielbereit. Unmittelbar vor dem Snap begeht\nA77 einen Fehlstart. Team A erhält eine 5-Meterstrafe und es ist damit ein 3. und 10 von der B-35. Beide Teams stellen sich auf, sind in\nPosition und der Ball ist spielbereit, als Team B’s Head Coach ein Timeout verlangt."
ruling: "Die Schiedsrichter sollen Team B’s TimeoutVerlangen ignorieren. Team B hat zwar noch zwei Timeouts, aber sie\nhaben in dieser Dead Ball Periode bereits ein Timeout genommen, so\ndass ein weiteres Timeout nicht zugelassen wird. Da der Fehlstart ein\nDead Ball Foul ist, befindet man sich immer noch in derselben Dead\nBall Periode in der Team B bereits ein Timeout verbraucht hat. Daher\nwird Team B kein weiteres Timeout erlaubt."
