src/snapshots/afrotd__parser__tests__interpretation_3.3.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 2
index: 2
text: "4. und 4. Team A erzielt mit einem Lauf, der im Spielfeld endet,\n(a) sechs Meter oder (b) drei Meter. B1 war während des Spieles Offside."
ruling: "(a) Team A’s Ball. First Down und 10. Die Game Clock\nstartet beim Signal des Referees. (b) Team A’s Ball. First Down und\n10 nach Annahme der Strafe. Die Game Clock startet beim Signal des\nReferees."
